[package]
name = "json_scanner"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@athonet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util-preview = "=0.3.0-alpha.19"
tokio = "=0.2.0-alpha.6"
serde_json = "1.0"
structopt = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
